# cpp-playground

./: README.md
hello-boost/: CMakeLists.txt  main.cpp
hello-boost/test/: CMakeLists.txt  test.cpp
hello-vcpkg/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HelloVCPKG.cpp  README.md  vcpkg.json
playground/: CMakeLists.txt  vcpkg-configuration.json
playground/src/: array_shuffle.cpp  array_shuffle.h
playground/tests/: array_shuffle_tests.cpp  tests.cpp
ptr-fun/: CMakeLists.txt  main.cpp
socrates-rock-paper-scissors/: CMakeLists.txt  main.cpp
